docs-archive/apache-airflow-providers-google/6.6.0/_sources/_api/airflow/providers/google/cloud/transfers/postgres_to_gcs/index.rst.txt
:py:mod:`airflow.providers.google.cloud.transfers.postgres_to_gcs`
==================================================================

.. py:module:: airflow.providers.google.cloud.transfers.postgres_to_gcs

.. autoapi-nested-parse::

   PostgreSQL to GCS operator.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.transfers.postgres_to_gcs.PostgresToGCSOperator




.. py:class:: PostgresToGCSOperator(*, postgres_conn_id='postgres_default', use_server_side_cursor=False, cursor_itersize=2000, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.transfers.sql_to_gcs.BaseSQLToGCSOperator`

   Copy data from Postgres to Google Cloud Storage in JSON or CSV format.

   :param postgres_conn_id: Reference to a specific Postgres hook.
   :param use_server_side_cursor: If server-side cursor should be used for querying postgres.
       For detailed info, check https://www.psycopg.org/docs/usage.html#server-side-cursors
   :param cursor_itersize: How many records are fetched at a time in case of server-side cursor.

   .. py:attribute:: ui_color
      :annotation: = #a0e08c

      

   .. py:attribute:: type_map
      

      

   .. py:method:: query(self)

      Queries Postgres and returns a cursor to the results.


   .. py:method:: field_to_bigquery(self, field)

      Convert a DBAPI field to BigQuery schema format.


   .. py:method:: convert_type(self, value, schema_type)

      Takes a value from Postgres, and converts it to a value that's safe for
      JSON/Google Cloud Storage/BigQuery. Dates are converted to UTC seconds.
      Decimals are converted to floats. Times are converted to seconds.



